src/app/pages/productPage/index.css
body {
  display: flex;
  flex-direction: column;
  gap: 5rem;
  background-color: var(--primary);
  align-items: center;
  transition: var(--transition);
  position: relative;

  & #shadow {
    width: 100vw;
    height: 100vh;
    background-color: #222638bd;
    transition: var(--animation);
    display: none;
    z-index: 2;
    position: fixed;
  }

  &::-webkit-scrollbar {
    width: 0.8rem;
    background-color: var(--primary);
  }

  &::-webkit-scrollbar-thumb {
    background-color: var(--secondary);
    border-radius: 999px;
  }
}
nav {
  top: 4%;
}

#first-main {
  display: grid;
  grid-template-rows: min-content 1fr;
  margin-left: 98px;
  padding-inline: 3rem;
  padding-bottom: 3rem;
  height: 100vh;
}

#book-info {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  flex: 1 1 0;
  max-height: 100%;
  height: 100%;
  padding-bottom: 3rem;
  gap: 3rem;
  padding-inline: 1.5rem;
  margin-top: 2rem;

  & #book-img {
    flex: 1.2;
    background-color: var(--secondary);
    border-radius: 2.4rem;
    display: flex;
    align-items: center;
    min-width: 32rem;
    padding-block: 1rem;

    & #img {
      width: 230px;
      height: 360px;
      display: flex;
      overflow: hidden;
      margin: auto;
      justify-content: center;
      align-items: center;
      border-radius: 1.4rem;

      & img {
        margin: 0 auto;
        height: 100%;
      }
    }
  }

  & #book-details {
    flex: 2 1 27.5rem;
    display: grid;
    grid-template-columns: 1fr;
    justify-content: start;
    padding-top: 2rem;

    & header {
      display: flex;
      & h1 {
        font-size: 2.4rem;
      }
    }

    & #author {
      font-size: 2rem;
      font-weight: 500;
      letter-spacing: 0.1rem;
      opacity: 0.9;
    }

    & #book-description {
      & span {
        font-size: 2.2rem;
        font-weight: 600;
      }
      & #description-content {
        display: -webkit-box;
        overflow-y: hidden;
        -webkit-line-clamp: 6;
        -webkit-box-orient: vertical;
        font-weight: 400;
        font-size: 1.4rem;
      }
    }
  }
  & footer {
    height: 100%;
    display: grid;
    gap: 1rem;

    & span {
      display: flex;
      justify-content: space-between;

      & p {
        font-family: "Montserrat";
      }

      & p:nth-child(1) {
        font-size: 1.6rem;
        font-weight: 500;
      }
      & p:nth-child(2) {
        font-weight: 300;
        font-size: 1.4rem;
      }
    }

    & #buy-now {
      padding: 1.5rem;
      border-radius: 0.8rem;
      border: none;
      background-color: var(--purple);
      display: flex;
      justify-content: center;
      align-items: center;
      cursor: pointer;
      transition: var(--animation);
      flex: 2;
      grid-column: 1/3;

      &:hover {
        filter: brightness(0.8);
      }

      & p {
        color: #e9e9e9;
      }
    }

    & .fav-or-bag {
      display: grid;
      grid-template-columns: repeat(2, 1fr);
      gap: 0.8rem;
      max-height: 11rem;

      & button:nth-child(1),
      button:nth-child(2) {
        display: flex;
        justify-content: center;
        align-items: center;
        border-radius: 1rem;
        gap: 1rem;
        flex: 1;
        padding: 0.8rem;
        border: 0.25rem solid var(--purple);
        background-color: transparent;
        font-size: 1rem;
        transition: var(--animation);
        cursor: pointer;

        &:hover {
          filter: brightness(0.8);
        }

        & p,
        i {
          color: var(--purple);
          transition: var(--animation);
          display: block;
        }

        &:hover p,
        &:hover i {
          color: #e9e9e9;
        }
      }
    }
  }
}

.translate {
  transform: translateY(0) !important;
}

#second-main {
  margin-top: 6rem;
  width: 100%;

  & #comments-and-recommended {
    display: flex;
    flex-direction: column;
    margin-left: 98px;
    padding: 0 3rem;
    max-width: 100%;

    & header {
      display: flex;
      justify-content: space-between;
      flex: 1 1 0;
      padding: 2rem;
      width: 100%;
      position: sticky;

      & p {
        font-size: 1.6rem;
        font-weight: 500;
        display: flex;
        align-items: center;
        gap: 1rem;

        &:nth-child(2) {
          transition: var(--animation);
          cursor: pointer;

          & i {
            transition: var(--animation);
          }

          &:hover,
          &:hover i {
            color: var(--purple);
          }
        }
      }
    }

    & #for-you {
      margin-top: 3rem;
      padding-bottom: 8rem;

      & p {
        font-size: 1.6rem;
      }

      & #cards {
        margin: 3rem auto;
        width: 100%;
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(13rem, 1fr));
        row-gap: 1.8rem;
        column-gap: 1.5rem;
        padding-bottom: 2rem;
      }
    }
  }
}

#comments,
#all-comments,
#all-comments div {
  display: flex;
  overflow-y: scroll;
  scroll-snap-type: y mandatory;

  &::-webkit-scrollbar {
    width: 0.8rem;
    background-color: var(--primary);
  }

  &::-webkit-scrollbar-thumb {
    background-color: var(--secondary);
    border-radius: 999px;
  }

  & ul {
    display: flex;
    flex-direction: column;
    gap: 3rem;

    & li {
      justify-content: center;
      display: flex;
      align-items: center;
      padding: 1rem;
      gap: 1rem;
      position: relative;
      scroll-snap-align: start;
      scroll-padding-top: 1rem;

      &::before {
        content: "";
        width: 100%;
        height: 0.1rem;
        background-color: var(--stroke-color);
        position: absolute;
        bottom: -1.5rem;
      }
      & img {
        width: 6rem;
        border-radius: 25%;
        align-self: flex-start;
      }

      & .evaluation-data {
        gap: 0.4rem;
        display: grid;
        font-size: 1.6rem;

        & .name {
          font-weight: 500;
        }

        & .date {
          padding: 0;
          font-weight: 400;
        }

        & .assessment-content {
          font-weight: 400;
          display: -webkit-box;
          overflow-y: hidden;
          -webkit-line-clamp: 3;
          -webkit-box-orient: vertical;
        }
      }
    }
  }
}

#comments {
  max-height: 600px;
}

.card {
  transition: var(--animation);
  display: grid;
  grid-template-rows: 1fr fit-content;
  min-height: 28rem;
  gap: 1rem;
  align-items: start;

  & p,
  a {
    font-size: 1.3rem !important;
  }

  & .book-info {
    display: grid;
    row-gap: 1rem;
  }

  & .card-title {
    font-weight: 500;
    align-self: flex-start;
    display: -webkit-box;
    overflow-y: hidden;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
  }

  & .card-price {
    align-self: flex-start;
    align-items: end;
    display: flex !important;
    height: 100%;
  }

  & .card-author {
    font-weight: 400;
    font-size: 1.2rem !important;
    display: -webkit-box;
    overflow-y: hidden;
  }
}


.book-data {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding-inline: 0.6rem;
  flex: 1 1 0;
  padding-inline: 1rem;
}

.img {
  width: 100%;
  border-radius: 2.4rem;
  display: flex;
  padding-block: 1rem;
  background-color: var(--secondary);
  padding: 1rem;
  height: 20rem;

  & img {
    max-width: 130px;
    margin: 0 auto;
    object-fit: cover;
    border-radius: 1.2rem;
  }
}

#all-comments {
  background-color: var(--primary);
  overflow-y: scroll;
  position: fixed;
  z-index: 10;
  padding-top: 1.4rem;
  height: 100%;
  transform: translateX(100%);
  transition: var(--animation);
  flex-direction: column;

  & #comments-header {
    padding: 2rem 1rem;
    position: fixed;
    top: 0;
    /* background-color: var(--primary); */
    z-index: 1;
    width: 100%;

    & div {
      gap: 1rem;
      align-items: center;
      display: flex;
      cursor: pointer;

      &:hover i,
      &:hover p {
        color: var(--purple);
      }
    }
    & p,
    i {
      transition: var(--animation);
      font-size: 1.6rem;
    }
  }

  & div:not(li div, header div) {
    max-height: 100%;
    overflow-y: scroll;
    margin-top: 6rem;
  }

  & ul {
    padding: 1rem;
    height: 100%;

    & li div .assessment-content {
      display: flex !important;
    }
  }
}

@media (max-width: 820px) {
  body {
    align-items: initial;
  }

  #first-main {
    margin-left: 0;
    padding: 0;

    /* & #main-header {
      padding-inline: 1.2rem;
      gap: 10px;
      align-items: center;
      position: fixed;
      transform: translateY(-11rem);
      transition: var(--animation);
      padding: 2rem;
      opacity: 0;
      z-index: 1;

      & i {
        font-size: 2.4rem;
        position: initial;
      }
      & div {
        flex: 1 1 0;
        height: 45px;
      }

      & button {
        display: flex;
        position: initial;
        height: 45px;
        width: 50px;

        & i {
          font-size: 4rem;
        }
      }
    } */
  }

  #book-info {
    height: 100lvh;
  }

  #second-main {
    & #comments-and-recommended {
      margin-left: 0;
      padding: 0;
    }
  }
}

@media (max-width: 520px) {
  #first-main {
    height: fit-content;
  }

  #book-info {
    flex-direction: column;
    height: 100%;

    & #book-img {
      height: fit-content;
      padding-block: 0.8rem;
      min-width: 0;
      & #img {
        width: 170px;
        height: 250px;
      }
    }

    & #book-details {
      padding-top: 0;
      gap: 1rem;
      & header h1 {
        font-size: 1.8rem;
      }
      & #author {
        font-size: 1.4rem;
      }
      & #book-description {
        display: grid;
        gap: 0.2rem;

        & span {
          font-size: 1.6rem;
        }

        & #description-content {
          overflow-y: scroll;
          height: 12rem;
          line-height: 2rem;
          font-weight: 400;
          font-size: 1.4rem;
        }
      }
    }

    & footer {
      margin-top: 1rem;
      gap: 2rem;

      & .fav-or-bag {
        grid-template-columns: 1fr 1fr 4fr !important;
        grid-template-rows: 4.8rem;
        position: fixed;
        left: 0;
        bottom: 0;
        width: 100%;
        padding: 0;
        gap: 0;
        background-color: var(--primary);
        z-index: 1;

        & button:nth-child(1) p,
        button:nth-child(2) p {
          display: none;
        }
        & button:nth-child(1),
        button:nth-child(2) {
          border: none;
          background-color: var(--secondary);
          border-radius: 0;
          border-right: 1px solid var(--stroke-color);
          & i {
            color: var(--text);
          }
        }

        & #buy-now {
          grid-column: initial;
          border-radius: 0;
        }
      }
    }
  }

  #second-main {
    margin-top: 0;

    & #comments {
      overflow-y: scroll !important;
      scroll-padding-inline: 1rem;
      scroll-snap-type: x mandatory;

      &::-webkit-scrollbar {
        height: 0;
      }

      & ul {
        flex-direction: row !important;
        gap: 1rem !important;
        padding-inline: 1.5rem;

        & li {
          min-width: 20rem;
          scroll-snap-align: start;
          align-items: center;
          border-radius: 1.4rem;
          background-color: var(--secondary);

          &::before {
            all: unset;
          }

          & .evaluation-data {
            gap: 0.8rem !important;

            & .date {
              font-size: 1.2rem;
            }

            & .assessment-content {
              font-size: 1.4rem;
            }
          }
          & img {
            display: none;
          }
        }
      }
    }

    & #for-you {
      padding-inline: 1.5rem;
    }
  }
}

